--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/stack": "^6.3.29",
     "expo": "^51.0.2",
+    "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "^1.15.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-camera": "~15.0.6",
+    "expo-media-library": "~16.0.3",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
